--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -1,11 +1,11 @@
 {% load static %}
 
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-none">
+<nav class="navbar navbar-expand-lg navbar-none bg-none ">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="{% static 'assets/logo.png' %}" style="width:140px; height:auto;" alt="">
-        Navbar</a>
+        <img src="{% static 'assets/logo1.svg' %}" style="width:140px; height:auto;" alt="">
+        </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -36,10 +36,7 @@
             </div>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-sm-2" type="text" placeholder="Search" pwa2-uuid="EDITOR/input-6B6-2EC-1AF1C-0D1" pwa-fake-editor="">
-          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-        </form>
+       
       </div>
     </div>
   </nav>
