--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.2.0/solar/bootstrap.min.css" integrity="sha512-f4noExn47ew8g+h/pLiGQLq9g12q0qfbBDh/6OpHYYZm2VaQlwQxM99FZ+GBtLOvuxWVCu0dC/73D2tJTuDPjA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    {% if title %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.2.0/litera/bootstrap.min.css" integrity="sha512-RxCahUxa1Cg6Zebd0MrBja/PvGkHdD+xKCDDWVSls3qRGuvjaLQe56GPrUO9Ab0JB+sR1IPcwm/Qg1g1eHMr/Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />    {% if title %}
     <title>{{title}}</title>
     {% else %}
     <title>Tasker - The Developer Dashboard</title>
