--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -4,5 +4,12 @@
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/home.css' %}">
 
+<div class="container-fluid hero ">
+  {% include 'core/navbar.html' %}
+<h1>Hello hero</h1>
+</div>
+<div class="container-fluid cta ">
+  <h1>Hello hero</h1>
+  </div>
 
 {% endblock %}
