--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -4,13 +4,13 @@
 <nav class="navbar navbar-expand-lg navbar-none bg-none ">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="{% static 'assets/logo1.svg' %}" style="width:140px; height:auto;" alt="">
+        <img src="{% static 'assets/logo1.svg' %}" style="width:190px; height:auto;" alt="">
         </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarColor03">
-        <ul class="navbar-nav me-auto">
+        <ul class="navbar-nav m-auto">
           <li class="nav-item">
             <a class="nav-link active" href="#">Home
               <span class="visually-hidden">(current)</span>
@@ -35,6 +35,17 @@
               <a class="dropdown-item" href="#">Separated link</a>
             </div>
           </li>
+        </ul>
+       
+      </div>
+
+      <div class="collapse navbar-collapse" id="navbarColor03">
+        <ul class="navbar-nav ms-auto">
+         
+          <li class="nav-item">
+            <a class="nav-link" href="#">Login</a>
+          </li>
+        
         </ul>
        
       </div>
