--- a/static/css/home.css
+++ b/static/css/home.css
@@ -6,10 +6,11 @@
 .hero{
     height: 100vh;
     width: 100%;
-    background-image: url('../assets/herro.png');
+    background-color: #b5f1fcb0;
+    /* background-image: url('../assets/herro.png');
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
 }
 
 .cta{
