--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -8,12 +8,13 @@
   <div class="container">
     {% include 'core/navbar.html' %}
 
-    <div class="row">
-      <div class="col-md-6">
-
+    <div class="row align-items-center">
+      <div class="col-md-6 ">
+        <h1 class=" fw-bold">Your everyday</h1>
+        <h1 class="fw-bold">tasks, automated</h1>
       </div>
       <div class="col-md-6">
-        <img src="{% static 'assets/amico.svg' %}" class="img-fluid" alt="">
+        <img src="{% static 'assets/mk1.png' %}" class="img-fluid" height="400" width="480" alt="">
       </div>
     </div>
   </div>
