update hero image styling from figma

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -14,7 +14,7 @@
         <h1 class="fw-bold">tasks, automated</h1>
       </div>
       <div class="col-md-6">
-        <img src="{% static 'assets/mk1.png' %}" class="img-fluid" height="400" width="480" alt="">
+        <img src="{% static 'assets/image.svg' %}" class="img-fluid" alt="">
       </div>
     </div>
   </div>
