create a yellow learn more button

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -12,6 +12,9 @@
       <div class="col-md-6 ">
         <h1 class=" fw-bold">Your everyday</h1>
         <h1 class="fw-bold">tasks, automated</h1>
+
+        <button class="button-52" role="button">Button 52</button>
+
       </div>
       <div class="col-md-6">
         <img src="{% static 'assets/image.svg' %}" class="img-fluid" alt="">
