--- a/static/css/home.css
+++ b/static/css/home.css
@@ -17,14 +17,29 @@
     background-size: cover;
     background-repeat: no-repeat; */
 }
-
+a{
+    text-decoration: none;
+    
+}
+a:hover {
+    color: white;
+}
 .cta{
     height: 100vh;
     width: 100%;
 
 }
 h1{
-    font-size: 70px;
+    font-size: 60px;
+}
+.lrn{
+    color: #000;
+    font-weight: bolder;
+    font-size: 16px;
+}
+.lrn:hover{
+    font-weight: bold;
+    color: #000;
 }
 
 .nav-link{
@@ -103,40 +118,63 @@ h1{
 
 
 /* CSS */
-.button-52 {
-  font-size: 16px;
-  font-weight: 200;
-  letter-spacing: 1px;
-  padding: 13px 20px 13px;
-  outline: 0;
-  border: 1px solid black;
+.button-79 {
+  backface-visibility: hidden;
+  background: #332cf2;
+  border: 0;
+  border-radius: .375rem;
+  box-sizing: border-box;
+  color: #fff;
   cursor: pointer;
+  display: inline-block;
+  font-family: Circular,Helvetica,sans-serif;
+  font-size: 1.125rem;
+  font-weight: 700;
+  letter-spacing: -.01em;
+  line-height: 1.3;
+  padding: 1rem 1.25rem;
   position: relative;
-  background-color: rgba(0, 0, 0, 0);
+  text-align: left;
+  text-decoration: none;
+  transform: translateZ(0) scale(1);
+  transition: transform .2s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
 }
 
-.button-52:after {
+.button-79:disabled {
+  color: #787878;
+  cursor: auto;
+}
+
+.button-79:not(:disabled):hover {
+  transform: scale(1.05);
+}
+
+.button-79:not(:disabled):hover:active {
+  transform: scale(1.05) translateY(.125rem);
+}
+
+.button-79:focus {
+  outline: 0 solid transparent;
+}
+
+.button-79:focus:before {
+  border-width: .125rem;
   content: "";
-  background-color: #ffe54c;
-  width: 100%;
-  z-index: -1;
+  left: calc(-1*.375rem);
+  pointer-events: none;
   position: absolute;
-  height: 100%;
-  top: 7px;
-  left: 7px;
-  transition: 0.2s;
+  top: calc(-1*.375rem);
+  transition: border-radius;
+  user-select: none;
 }
 
-.button-52:hover:after {
-  top: 0px;
-  left: 0px;
+.button-79:focus:not(:focus-visible) {
+  outline: 0 solid transparent;
 }
 
-@media (min-width: 768px) {
-  .button-52 {
-    padding: 13px 50px 13px;
-  }
+.button-79:not(:disabled):active {
+  transform: translateY(.125rem);
 }
