adjust colours in hero section to match project theme

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -11,8 +11,8 @@
     <div class="row align-items-center">
       <div class="col-md-6 ">
         <h1 class=" fw-bold">Your everyday</h1>
-        <h1 class="fw-bold ">tasks, automated</h1>
-        <p class="mb-3">Tasker lets you design and streamline your everyday tasks and workflows with just a few clicks.</p>
+        <h1 class="fw-bold mb-4"><span class="tasks">tasks,</span>  automated</h1>
+        <p class="mb-3 mt-4">Tasker lets you design and streamline your everyday tasks and workflows with just a few clicks.</p>
         <div class="row mt-md-5">
           <div class="col">
             <a href="#" class="button-50">Create Account</a>
