--- a/static/css/home.css
+++ b/static/css/home.css
@@ -29,6 +29,11 @@ a:hover {
     width: 100%;
 
 }
+.tasks{
+    font-weight: bolder;
+    background-color: #ff963a9c;
+    color: #ff0095;
+}
 h1{
     font-size: 60px;
 }
@@ -47,7 +52,9 @@ h1{
     font-weight: bolder;
     font-size: 16px;
 }
-
+.crt:hover{
+  color: #fff;
+}
 ul li a::after {
     position: absolute;
     content: "";
