--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -45,7 +45,7 @@
                 <a class="nav-link fw-bold me-4" href="#">Sign in</a>
               </li>
           <li class="nav-item">
-            <a class="nav-link button-50" href="#">Create Account</a>
+            <a class="nav-link button-50 crt" href="#">Create Account</a>
           </li>
         
         </ul>
