add features cards in cta section

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -31,8 +31,20 @@
   </div>
 
 </div>
-<div class="container-fluid cta ">
-  <h1>Hello hero</h1>
-  </div>
+
+
+<div class="container mt-md-5 ">
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col mt-md-5 mb-md-5">
+      <img src="{% static 'assets/Gp6.svg' %}" alt="" class="img-fluid">
+    </div>
+    <div class="col mt-md-5 mb-md-5">
+      <img src="{% static 'assets/Gp7.svg' %}" alt="" class="img-fluid">
+    </div>
+    <div class="col mt-md-5 mb-md-5">
+      <img src="{% static 'assets/Gp8.svg' %}" alt="" class="img-fluid">
+    </div>
+  </div>  
+</div>
 
 {% endblock %}
