--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -47,4 +47,18 @@
   </div>  
 </div>
 
+<div class="container mt-md-5 productive">
+  <div class="row ">
+    <h3 class="text-center mt-md-5 mb-md-5">
+      Productive features
+    </h3>
+    <div class="col-md-6">
+      <img src="{% static 'assets/gp9.svg' %}" class="img-fluid mt-md-4" alt="">
+    </div>
+    <div class="col-md-6">
+
+    </div>
+  </div>
+</div>
+
 {% endblock %}
