--- a/static/css/home.css
+++ b/static/css/home.css
@@ -17,6 +17,11 @@
     background-size: cover;
     background-repeat: no-repeat; */
 }
+.productive{
+  height: 100vh;
+  width: 100%;
+  background-color: #dfeff1b0;
+}
 a{
     text-decoration: none;
     
