--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -24,8 +24,8 @@
         </div>
 
       </div>
-      <div class="col-md-6">
-        <img src="{% static 'assets/image.svg' %}" class="img-fluid" alt="">
+      <div class="col-md-6 mb-5">
+        <img src="{% static 'assets/image.svg' %}" class="img-fluid mb-5" alt="">
       </div>
     </div>
   </div>
@@ -36,24 +36,24 @@
 <div class="container mt-md-5 ">
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col mt-md-5 mb-md-5">
-      <img src="{% static 'assets/Gp6.svg' %}" alt="" class="img-fluid">
+      <img src="{% static 'assets/Gp6.svg' %}" alt="" class="img-fluid gp">
     </div>
     <div class="col mt-md-5 mb-md-5">
-      <img src="{% static 'assets/Gp7.svg' %}" alt="" class="img-fluid">
+      <img src="{% static 'assets/Gp7.svg' %}" alt="" class="img-fluid gp">
     </div>
     <div class="col mt-md-5 mb-md-5">
-      <img src="{% static 'assets/Gp8.svg' %}" alt="" class="img-fluid">
+      <img src="{% static 'assets/Gp8.svg' %}" alt="" class="img-fluid gp">
     </div>
   </div>  
 </div>
 
 <div class="container-fluid mt-md-5 productive">
-  <div class="container">
+  <div class="container ">
   <div class="row align-items-center">
     <h3 class="text-center mt-md-5 mb-md-5">
       Productive features
     </h3>
-    <div class="col-md-6">
+    <div class="col-md-6 mb-5">
       <img src="{% static 'assets/gp9.svg' %}" class="img-fluid mt-md-4" alt="">
     </div>
 
@@ -61,7 +61,7 @@
       <h6 class="fw-bold mb-3  mt-5">INTRODUCING TASKER</h6>
     <h3 class="fw-bold mb-4 mt-3">Manage your tasks and projects effectively.</h3>
     <p class="mt-4">Tasker is the ultimate task management software with unlimited flexibility, designed to help developers and individuals work effectively and productively in one unified environment.</p>
-  <div class="row">
+  <div class="row mb-md-5">
     <div class="col">
       <p><small class="fw-bold"><i class="fa-solid fa-circle-check"></i> Automate your workflows and get work done.</small></p>
       <p><small class="fw-bold"><i class="fa-solid fa-circle-check"></i> Easily track your interviews and job applications.</small></p>
