add gradient color to main titles and replace card with text error

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -10,6 +10,7 @@
 
     <div class="row align-items-center">
       <div class="col-md-6 ">
+        <h6 class="text-muted mb-5">Task management done better.</h6>
         <h1 class=" fw-bold">Your everyday</h1>
         <h1 class="fw-bold mb-4"><span class="tasks">tasks,</span>  automated</h1>
         <p class="mb-3 mt-4">Tasker lets you design and streamline your everyday tasks and workflows with just a few clicks.</p>
@@ -50,10 +51,10 @@
 <div class="container-fluid mt-md-5 productive">
   <div class="container ">
   <div class="row align-items-center">
-    <h3 class="text-center mt-md-5 mb-md-5">
+    <h3 class="text-center mt-5 mb-5 prod">
       Productive features
     </h3>
-    <div class="col-md-6 mb-5">
+    <div class="col-md-6 mb-5 ">
       <img src="{% static 'assets/gp9.svg' %}" class="img-fluid mt-md-4" alt="">
     </div>
 
