--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,89 +1,106 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400&display=swap');
 
 
-*{
-   padding: 0;
-   margin: 0;
-   font-family: 'Poppins', sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
 
 }
-.gp{
+
+.gp {
   transition: transform .2s;
 }
-.gp:hover{
+
+.gp:hover {
 
   transform: scale(1.1);
 }
 
-.hero{
-    height: auto;
-    width: auto;
-    background-color: #dfeff1b0;
-    /* background-image: url('../assets/herro.png');
+.hero {
+  height: auto;
+  width: auto;
+  background-color: #dfeff1b0;
+  /* background-image: url('../assets/herro.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat; */
 }
-.productive{
+
+.productive {
   height: auto;
   width: auto;
   background-color: #dfeff1b0;
 }
-a{
-    text-decoration: none;
-    
+
+a {
+  text-decoration: none;
+
 }
+
 a:hover {
-    color: white;
-}
-.cta{
-    height: 100vh;
-    width: 100%;
-
-}
-.tasks{
-    font-weight: bolder;
-    background-color: #ff963a9c;
-    color: #ff0095;
-}
-h1{
-    font-size: 60px;
-}
-.lrn{
-    color: #000;
-    font-weight: bolder;
-    font-size: 16px;
-}
-.lrn:hover{
-    font-weight: bold;
-    color: #000;
+  color: white;
 }
 
-.nav-link{
-    color: rgb(39, 38, 38);
-    font-weight: bolder;
-    font-size: 16px;
+.cta {
+  height: 100vh;
+  width: 100%;
+
 }
-.crt:hover{
+
+.tasks {
+  font-weight: bolder;
+  background-color: #ff963a9c;
+  color: #ff0095;
+}
+
+h1, .prod {
+  font-size: 60px;
+  background: -webkit-linear-gradient(rgb(97, 5, 105), rgb(48, 5, 148));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.lrn {
+  color: #000;
+  font-weight: bolder;
+  font-size: 16px;
+}
+
+.lrn:hover {
+  font-weight: bold;
+  color: #000;
+}
+
+.nav-link {
+  color: rgb(39, 38, 38);
+  font-weight: bolder;
+  font-size: 16px;
+}
+
+.crt:hover {
   color: #fff;
 }
+
 ul li a::after {
-    position: absolute;
-    content: "";
-   
-    background: #ff7000;
-    transition: transform 0.5s;
-    transform: scaleX(0);
-    transform-origin: right;
-  }
-  ul li a:hover {
-    color: orange;
-    border-bottom: 3px solid orange;
-  }
-  ul li a:hover::after {
-    transform: scaleX(1);
-    transform-origin: left;
-  }
+  position: absolute;
+  content: "";
+
+  background: #ff7000;
+  transition: transform 0.5s;
+  transform: scaleX(0);
+  transform-origin: right;
+}
+
+ul li a:hover {
+  color: orange;
+  border-bottom: 3px solid orange;
+}
+
+ul li a:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
 
 
 
@@ -109,12 +126,12 @@ ul li a::after {
   background-image: none;
   border: 1px solid #000;
   border-radius: 4px;
-  box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+  box-shadow: #fff 4px 4px 0 0, #000 4px 4px 0 1px;
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
+  font-family: ITCAvantGardeStd-Bk, Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
@@ -165,7 +182,7 @@ ul li a::after {
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  font-family: Circular,Helvetica,sans-serif;
+  font-family: Circular, Helvetica, sans-serif;
   font-size: 1.125rem;
   font-weight: 700;
   letter-spacing: -.01em;
