--- a/static/css/home.css
+++ b/static/css/home.css
@@ -60,7 +60,10 @@ h1, .prod {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
+.fa-circle-check{
+  color: #ebb41e;
+  font-size: 20px;
+}
 .lrn {
   color: #000;
   font-weight: bolder;
