create informed decisions section

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -55,7 +55,7 @@
       Productive features
     </h3>
     <div class="col-md-6 mb-5 ">
-      <img src="{% static 'assets/gp9.svg' %}" class="img-fluid mt-md-4" alt="">
+      <img src="{% static 'assets/gp9.svg' %}" class="img-fluid mt-5 mb-5" alt="">
     </div>
 
     <div class="col-md-6">
@@ -76,5 +76,22 @@
   </div>
 </div>
 </div>
+
+<section>
+  <div class="container">
+    <div class="row mt-5 mb-5 align-items-center">
+      <div class="col-md-2"></div>
+      <div class="col-md-4">
+        <h3 class="fw-bold mb-5 mt-5">Make informed decisions, plan productive days well.</h3>
+        <p class="mt-5 mb-5">Tasker gives you reports and updates to help you make meaningful and smart plans & schedules..</p>
+
+      </div>
+      <div class="col-md-4">
+        <img src="{% static 'assets/dsn.png' %}" class="img-fluid mt-5 mb-5" alt="">
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+  </div>
+</section>
 
 {% endblock %}
