change navbar menu items

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -83,7 +83,7 @@
       <div class="col-md-2"></div>
       <div class="col-md-4">
         <h3 class="fw-bold mb-5 mt-5">Make informed decisions, plan productive days well.</h3>
-        <p class="mt-5 mb-5">Tasker gives you reports and updates to help you make meaningful and smart plans & schedules..</p>
+        <p class="">Tasker gives you reports and updates to help you make meaningful and smart plans & schedules..</p>
 
       </div>
       <div class="col-md-4">
