--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -12,7 +12,7 @@
       <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Home
+            <a class="nav-link active" href="#">Overview
               <span class="visually-hidden">(current)</span>
             </a>
           </li>
@@ -20,7 +20,7 @@
             <a class="nav-link" href="#">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Customers</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
