--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -1,31 +1,31 @@
 {% load static %}
 
-
-<nav class="navbar navbar-expand-lg navbar-none bg-none ">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="{% static 'assets/logo.svg' %}" style="width:190px; height:auto;" alt="">
-        </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarColor03">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Overview
-              <span class="visually-hidden">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Customers</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-          <!-- <li class="nav-item dropdown">
+<nav class="navbar navbar-expand-lg navbar-none bg-none">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      <img src="{% static 'assets/logo.svg' %}" style="width: 190px; height: auto" alt="" />
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
+      aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarColor03">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Overview
+            <span class="visually-hidden">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Customers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+        <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="#">Action</a>
@@ -35,21 +35,18 @@
               <a class="dropdown-item" href="#">Separated link</a>
             </div>
           </li> -->
-        </ul>
-       
-      </div>
-
-      <div class="collapse navbar-collapse" id="navbarColor03">
-        <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-                <a class="nav-link fw-bold me-4" href="#">Sign in</a>
-              </li>
-          <li class="nav-item">
-            <a class="nav-link button-50 crt" href="#">Create Account</a>
-          </li>
-        
-        </ul>
-       
-      </div>
+      </ul>
     </div>
-  </nav>
+
+    <div class="collapse navbar-collapse" id="navbarColor03">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link fw-bold me-4" href="#">Sign in</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link button-50 crt" href="#">Create Account</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
