--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -1,19 +1,21 @@
-{% extends 'base.html' %}
-{% load static %}
+{% extends 'base.html' %} {% load static %} {% block content %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}" />
 
-{% block content %}
-<link rel="stylesheet" href="{% static 'css/home.css' %}">
-
-<div class="container-fluid hero ">
+<div class="container-fluid hero">
   <div class="container">
     {% include 'core/navbar.html' %}
 
     <div class="row align-items-center">
-      <div class="col-md-6 ">
+      <div class="col-md-6">
         <h6 class="text-muted mb-5">Task management done better.</h6>
-        <h1 class=" fw-bold">Your everyday</h1>
-        <h1 class="fw-bold mb-4"><span class="tasks">tasks,</span>  automated</h1>
-        <p class="mb-3 mt-4">Tasker lets you design and streamline your everyday tasks and workflows with just a few clicks.</p>
+        <h1 class="fw-bold">Your everyday</h1>
+        <h1 class="fw-bold mb-4">
+          <span class="tasks">tasks,</span> automated
+        </h1>
+        <p class="mb-3 mt-4">
+          Tasker lets you design and streamline your everyday tasks and
+          workflows with just a few clicks.
+        </p>
         <div class="row mt-md-5">
           <div class="col">
             <a href="#" class="button-50">Create Account</a>
@@ -23,58 +25,71 @@
           </div>
           <div class="col"></div>
         </div>
-
       </div>
       <div class="col-md-6 mb-5">
-        <img src="{% static 'assets/image.svg' %}" class="img-fluid mb-5" alt="">
+        <img src="{% static 'assets/image.svg' %}" class="img-fluid mb-5" alt="" />
       </div>
     </div>
   </div>
-
 </div>
 
-
-<div class="container mt-md-5 ">
+<div class="container mt-md-5">
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col mt-md-5 mb-md-5">
-      <img src="{% static 'assets/Gp6.svg' %}" alt="" class="img-fluid gp">
+      <img src="{% static 'assets/Gp6.svg' %}" alt="" class="img-fluid gp" />
     </div>
     <div class="col mt-md-5 mb-md-5">
-      <img src="{% static 'assets/Gp7.svg' %}" alt="" class="img-fluid gp">
+      <img src="{% static 'assets/Gp7.svg' %}" alt="" class="img-fluid gp" />
     </div>
     <div class="col mt-md-5 mb-md-5">
-      <img src="{% static 'assets/Gp8.svg' %}" alt="" class="img-fluid gp">
+      <img src="{% static 'assets/Gp8.svg' %}" alt="" class="img-fluid gp" />
     </div>
-  </div>  
+  </div>
 </div>
 
 <div class="container-fluid mt-md-5 productive">
-  <div class="container ">
-  <div class="row align-items-center">
-    <h3 class="text-center mt-5 mb-5 prod">
-      Productive features
-    </h3>
-    <div class="col-md-6 mb-5 ">
-      <img src="{% static 'assets/gp9.svg' %}" class="img-fluid mt-5 mb-5" alt="">
-    </div>
+  <div class="container">
+    <div class="row align-items-center">
+      <h3 class="text-center mt-5 mb-5 prod">Productive features</h3>
+      <div class="col-md-6 mb-5">
+        <img src="{% static 'assets/gp9.svg' %}" class="img-fluid mt-5 mb-5" alt="" />
+      </div>
 
-    <div class="col-md-6">
-      <h6 class="fw-bold mb-3  mt-5">INTRODUCING TASKER</h6>
-    <h3 class="fw-bold mb-4 mt-3">Manage your tasks and projects effectively.</h3>
-    <p class="mt-4">Tasker is the ultimate task management software with unlimited flexibility, designed to help developers and individuals work effectively and productively in one unified environment.</p>
-  <div class="row mb-md-5">
-    <div class="col">
-      <p><small class="fw-bold"><i class="fa-solid fa-circle-check"></i> Automate your workflows and get work done.</small></p>
-      <p><small class="fw-bold"><i class="fa-solid fa-circle-check"></i> Easily track your interviews and job applications.</small></p>
+      <div class="col-md-6">
+        <h6 class="fw-bold mb-3 mt-5">INTRODUCING TASKER</h6>
+        <h3 class="fw-bold mb-4 mt-3">
+          Manage your tasks and projects effectively.
+        </h3>
+        <p class="mt-4">
+          Tasker is the ultimate task management software with unlimited
+          flexibility, designed to help developers and individuals work
+          effectively and productively in one unified environment.
+        </p>
+        <div class="row mb-md-5">
+          <div class="col">
+            <p>
+              <small class="fw-bold"><i class="fa-solid fa-circle-check"></i> Automate your
+                workflows and get work done.</small>
+            </p>
+            <p>
+              <small class="fw-bold"><i class="fa-solid fa-circle-check"></i> Easily track your
+                interviews and job applications.</small>
+            </p>
+          </div>
+          <div class="col">
+            <p>
+              <small class="fw-bold"><i class="fa-solid fa-circle-check"></i> Track your projects
+                and tasks progress.</small>
+            </p>
+            <p>
+              <small class="fw-bold"><i class="fa-solid fa-circle-check"></i> Endless productivity,
+                simple and straightforward.</small>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col">
-      <p><small class="fw-bold"><i class="fa-solid fa-circle-check"></i> Track your projects and tasks progress.</small></p>
-      <p><small class="fw-bold"><i class="fa-solid fa-circle-check"></i> Endless productivity, simple and straightforward.</small></p>
-    </div>
-  </div>  
   </div>
-  </div>
-</div>
 </div>
 
 <section>
@@ -82,12 +97,16 @@
     <div class="row mt-5 mb-5 align-items-center">
       <div class="col-md-2"></div>
       <div class="col-md-4">
-        <h3 class="fw-bold mb-5 mt-5">Make informed decisions, plan productive days well.</h3>
-        <p class="">Tasker gives you reports and updates to help you make meaningful and smart plans & schedules..</p>
-
+        <h3 class="fw-bold mb-5 mt-5">
+          Make informed decisions, plan productive days well.
+        </h3>
+        <p class="">
+          Tasker gives you reports and updates to help you make meaningful and
+          smart plans & schedules..
+        </p>
       </div>
       <div class="col-md-4">
-        <img src="{% static 'assets/dsn.png' %}" class="img-fluid mt-5 mb-5" alt="">
+        <img src="{% static 'assets/dsn.png' %}" class="img-fluid mt-5 mb-5" alt="" />
       </div>
       <div class="col-md-2"></div>
     </div>
