add review section

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -113,4 +113,22 @@
   </div>
 </section>
 
+
+<section>
+  <div class="container-fluid mt-md-5 review">
+    <div class="container">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col mt-md-5 mb-md-5">
+        <img src="{% static 'assets/298.svg' %}" alt="" class="img-fluid gp" />
+      </div>
+      <div class="col mt-md-5 mb-md-5">
+        <img src="{% static 'assets/299.svg' %}" alt="" class="img-fluid gp" />
+      </div>
+      <div class="col mt-md-5 mb-md-5">
+        <img src="{% static 'assets/300.svg' %}" alt="" class="img-fluid gp" />
+      </div>
+    </div>
+  </div>
+  </div>
+</section>
 {% endblock %}
