add get started section

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -115,20 +115,37 @@
 
 
 <section>
-  <div class="container-fluid mt-md-5 review">
-    <div class="container">
+  <div class="container-fluid mt-5 review">
+    <div class="container mt-5">
+      <h3 class="text-center mt-5 mb-5 prod">What our users say</h3>
     <div class="row row-cols-1 row-cols-md-3 g-4">
+      
       <div class="col mt-md-5 mb-md-5">
-        <img src="{% static 'assets/298.svg' %}" alt="" class="img-fluid gp" />
+        <img src="{% static 'assets/298.svg' %}" alt="" class="img-fluid " />
       </div>
       <div class="col mt-md-5 mb-md-5">
-        <img src="{% static 'assets/299.svg' %}" alt="" class="img-fluid gp" />
+        <img src="{% static 'assets/299.svg' %}" alt="" class="img-fluid " />
       </div>
       <div class="col mt-md-5 mb-md-5">
-        <img src="{% static 'assets/300.svg' %}" alt="" class="img-fluid gp" />
+        <img src="{% static 'assets/300.svg' %}" alt="" class="img-fluid " />
       </div>
     </div>
   </div>
+  </div>
+</section>
+
+<section>
+  <div class="container-fluid">
+    <div class="container get">
+      <div class="row">
+        <div class="col-md-8">
+          <h3 class="fw-bold">Get started with Tasker</h3>
+        </div>
+        <div class="col-md-4">
+
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 {% endblock %}
