add a get started section

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -134,20 +134,34 @@
   </div>
 </section>
 
-<section>
-  <div class="container-fluid">
-    <div class="container get">
-      <div class="row">
-        <div class="col-md-8">
-          <h3 class="fw-bold">Get started with Tasker</h3>
-        </div>
-        <div class="col-md-4">
 
-        </div>
+
+<section>
+  <div class="container bll">
+    <div class="row mt-5 mb-5 align-items-center">
+      <div class="col-md-2"></div>
+      <div class="col-md-4">
+        <h3 class="fw-bold mb-5 mt-5">
+          Get started with Tasker.
+        </h3>
+        <p class="">
+          Tasker gives you reports and updates to help you make meaningful and
+          smart plans & schedules..
+        </p>
       </div>
+      <div class="col-md-4">
+        <img src="{% static 'assets/dash1.svg' %}" class="img-fluid mt-5 mb-5" alt="" />
+      </div>
+      <div class="col-md-2"></div>
     </div>
   </div>
 </section>
+
+
+
+
+
+
 
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted">
