create newsletter signup section

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -144,10 +144,7 @@
         <h3 class="fw-bold mb-5 mt-5">
           Get started with Tasker.
         </h3>
-        <p class="">
-          Tasker gives you reports and updates to help you make meaningful and
-          smart plans & schedules..
-        </p>
+        <a href="#" class="button-50">Create Account</a>
       </div>
       <div class="col-md-4">
         <img src="{% static 'assets/dash1.svg' %}" class="img-fluid mt-5 mb-5" alt="" />
@@ -165,6 +162,50 @@
 
 <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted">
+
+  <div class="container p-4 pb-0">
+   
+    <form action="">
+      <!--Grid row-->
+      <div class="row row-cols-1 row-cols-md-3">
+        <!--Grid column-->
+        <div class="col">
+          <div class="col-auto mb-4 mb-md-0">
+            <p class="pt-2">
+              <strong>Sign up for our newsletter</strong>
+            </p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="row mb-1">
+            <input type="email" class="form-control" id="inputEmail1" placeholder="Enter Your Email!">
+          
+          </div>
+        </div>
+        <div class="col">
+          <div class="col-auto mb-4 mb-md-0">
+            <!-- Submit button -->
+            <button type="submit" class="btn btn-primary mb-4">
+              Subscribe
+            </button>
+          </div>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+       
+        <!--Grid column-->
+
+        <!--Grid column-->
+        
+        <!--Grid column-->
+      </div>
+      <!--Grid row-->
+    </form>
+  </div>
+  <!-- Grid container -->
+
+
   <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
     <!-- Left -->
