--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -161,7 +161,7 @@
 
 
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted">
+<footer class="text-center text-lg-start text-muted" style="background-color: rgba(17, 1, 46, 0.815);">
 
   <div class="container p-4 pb-0">
    
