--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -7,10 +7,10 @@
 
     <div class="row align-items-center">
       <div class="col-md-6">
-        <h6 class="text-muted mb-5">Task management done better.</h6>
+        <h6 class="text-muted mb-5 devdash">The developer dashboard.</h6>
         <h1 class="fw-bold">Your everyday</h1>
         <h1 class="fw-bold mb-4">
-          <span class="tasks">tasks,</span> automated
+          <span class="tasks" id="tasks">tasks,</span> automated
         </h1>
         <p class="mb-3 mt-4">
           Tasker lets you design and streamline your everyday tasks and
@@ -20,9 +20,7 @@
           <div class="col">
             <a href="#" class="button-50">Create Account</a>
           </div>
-          <div class="col">
-            <a href="#" class="lrn m-4">Learn More</a>
-          </div>
+        
           <div class="col"></div>
         </div>
       </div>
@@ -178,7 +176,7 @@
         </div>
         <div class="col">
           <div class="row mb-1">
-            <input type="email" class="form-control" id="inputEmail1" placeholder="Enter Your Email!">
+            <input type="email" class="form-control" id="inputEmail1" placeholder="Email address">
           
           </div>
         </div>
