--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg navbar-none bg-none">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="{% static 'assets/logo.svg' %}" style="width: 190px; height: auto" alt="" />
+      <img src="{% static 'assets/logo.svg' %}" id="logo" alt="" />
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
       aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
