--- a/static/css/home.css
+++ b/static/css/home.css
@@ -56,9 +56,7 @@ h1,
 .prod {
   font-size: 50px;
   margin-top: 15px;
-  background: -webkit-linear-gradient(rgb(97, 5, 105), rgb(48, 5, 148));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  
 }
 
 .fa-circle-check {
@@ -243,18 +241,12 @@ ul li a:hover::after {
   transform: translateY(.125rem);
 }
 
-#tasks {
-  font-weight: bolder;
-  color: #ff0095 !important;
-}
 
 @media only screen and (max-width: 600px) {
   h1,
 .prod {
   font-size: 40px;
-  background: -webkit-linear-gradient(rgb(97, 5, 105), rgb(48, 5, 148));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+ 
 }
 #logo{
   width: 120px; height: auto; 
@@ -262,4 +254,11 @@ ul li a:hover::after {
 .devdash{
   margin-top: 20px;
 }
+}
+
+
+#tasks {
+  font-weight: bolder;
+  color: #ff0a99 !important;
+  border-bottom: 6px solid rgb(255, 0, 128);
 }
