--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -5,11 +5,11 @@
     <a class="navbar-brand" href="#">
       <img src="{% static 'assets/logo.svg' %}" id="logo" alt="" />
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
+    <p class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
       aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarColor03">
+      <span class="fa-solid fa-bars"></span>
+  </p>
+    <div class="collapse navbar-collapse " id="navbarColor03">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a class="nav-link active" href="#">Overview
