--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -41,7 +41,7 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link fw-bold me-4" href="#">Sign in</a>
+          <a class="nav-link fw-bold me-4" href="{% url 'signup' %}">Sign in</a>
         </li>
         <li class="nav-item">
           <a class="nav-link button-50 crt" href="#">Create Account</a>
