--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -21,8 +21,8 @@
             <h5 class="text-center fw-bold">Sign up</h5>
 
 
-            <div class="">
-                <form>
+            <div class="d-flex align-items-center justify-content-center">
+                <form method="POST" action="" enctype="multipart/form-data" class="regform">
                     <!-- 2 column grid layout with text inputs for the first and last names -->
                     <div class="row mb-4">
                       <div class="col">
