update page linking and styling of auth page

--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -12,18 +12,18 @@
     <div class="collapse navbar-collapse " id="navbarColor03">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Overview
+          <a class="nav-link active" href="#overview">Overview
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#features">Features</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Customers</a>
+          <a class="nav-link" href="#customers">Customers</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="#contact">Contact</a>
         </li>
         <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -41,10 +41,10 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link fw-bold me-4" href="{% url 'signup' %}">Sign in</a>
+          <a class="nav-link fw-bold me-4" href="#">Sign in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link button-50 crt" href="#">Create Account</a>
+          <a class="nav-link button-50 crt" href="{% url 'signup' %}">Create Account</a>
         </li>
       </ul>
     </div>
