--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -18,7 +18,7 @@
         <div class="col-md-6  right">
             <h1 class="mt-5 mb-md-5"></h1>
             <p class="text-center "><img src="{% static 'assets/logo.svg' %}" width="170" id="logo" alt="" /></p><br>
-            <h5 class="text-center fw-bold">Sign up</h5>
+            <h6 class="text-center fw-bold mt-5 mb-5">Create account</h6>
 
 
             <div class="d-flex align-items-center justify-content-center">
@@ -60,24 +60,24 @@
                     </div>
                   
                     <!-- Submit button -->
-                    <button type="submit" class="btn btn-primary btn-block mb-4">Sign up</button>
+                    <button type="submit" class="btn btn-warning btn-block mb-4">Sign up</button>
                   
                     <!-- Register buttons -->
                     <div class="text-center">
                       <p>or sign up with:</p>
-                      <button type="button" class="btn btn-primary btn-floating mx-1">
+                      <button type="button" class="btn btn-warning btn-floating mx-1">
                         <i class="fab fa-facebook-f"></i>
                       </button>
                   
-                      <button type="button" class="btn btn-primary btn-floating mx-1">
+                      <button type="button" class="btn btn-warning btn-floating mx-1">
                         <i class="fab fa-google"></i>
                       </button>
                   
-                      <button type="button" class="btn btn-primary btn-floating mx-1">
+                      <button type="button" class="btn btn-warning btn-floating mx-1">
                         <i class="fab fa-twitter"></i>
                       </button>
                   
-                      <button type="button" class="btn btn-primary btn-floating mx-1">
+                      <button type="button" class="btn btn-warning btn-floating mx-1">
                         <i class="fab fa-github"></i>
                       </button>
                     </div>
