--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
 <link rel="stylesheet" href="{% static 'css/home.css' %}" />
 
-<div class="container-fluid hero">
+<div class="container-fluid hero" id="overview">
   <div class="container">
     {% include 'core/navbar.html' %}
 
@@ -45,7 +45,7 @@
   </div>
 </div>
 
-<div class="container-fluid mt-md-5 productive">
+<div class="container-fluid mt-md-5 productive" id="features">
   <div class="container">
     <div class="row align-items-center">
       <h3 class="text-center mt-5 mb-5 prod">Productive features</h3>
@@ -112,7 +112,7 @@
 </section>
 
 
-<section>
+<section id="customers">
   <div class="container-fluid mt-5 review">
     <div class="container mt-5">
       <h3 class="text-center mt-5 mb-5 prod">What our users say</h3>
@@ -159,7 +159,7 @@
 
 
 <!-- Footer -->
-<footer class="text-center text-lg-start text-muted" style="background-color: rgba(17, 1, 46, 0.815);">
+<footer id="contact" class="text-center text-lg-start text-muted" style="background-color: rgba(17, 1, 46, 0.815);">
 
   <div class="container p-4 pb-0">
    
@@ -261,16 +261,16 @@
             Quick links
           </h6>
           <p>
-            <a href="#!" class="text-reset">Overview</a>
+            <a href="#overview" class="text-reset">Overview</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Features</a>
+            <a href="#features" class="text-reset">Features</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Customers</a>
+            <a href="#customers" class="text-reset">Customers</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Create account</a>
+            <a href="{% url 'signup' %}" class="text-reset">Create account</a>
           </p>
         </div>
         <!-- Grid column -->
